--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,12 @@ candle-nn = "0.4.1"
 candle-transformers = "0.4.1"
 hf-hub = "0.3.2"
 hyper = "1.2.0"
+log = "0.4.21"
 rayon = "1.9.0"
 serde = "1.0.197"
 serde_json = "1.0.115"
 tokenizers = "0.15.2"
 tokio = { version = "1.36.0", features = ["full"] }
 tokio-rayon = "2.1.0"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
