--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,44 @@
 ---
 version: '3.4'
 services:
-  weaviate:
-    command:
-    - --host
-    - 0.0.0.0
-    - --port
-    - '8080'
-    - --scheme
-    - http
-    image: semitechnologies/weaviate:1.24.5
-    ports:
-    - 8080:8080
-    - 50051:50051
-    volumes:
-    - weaviate_data:/var/lib/weaviate
-    restart: on-failure:0
-    environment:
-      QUERY_DEFAULTS_LIMIT: 25
-      AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: 'true'
-      PERSISTENCE_DATA_PATH: '/var/lib/weaviate'
-      ENABLE_MODULES: text2vec-transformers
-      TRANSFORMERS_INFERENCE_API: 'http://t2v-transformers-py:3000'
-      DEFAULT_VECTORIZER_MODULE: text2vec-transformers
-      CLUSTER_HOSTNAME: 'node1'
-  t2v-transformers-rs:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - 3000:3000
-  # t2v-transformers-py:
-  #   image: semitechnologies/transformers-inference:baai-bge-small-en-v1.5
+  # weaviate:
+  #   command:
+  #   - --host
+  #   - 0.0.0.0
+  #   - --port
+  #   - '8080'
+  #   - --scheme
+  #   - http
+  #   image: semitechnologies/weaviate:1.24.5
   #   ports:
-  #     - 8081:8080
+  #   - 8080:8080
+  #   - 50051:50051
+  #   volumes:
+  #   - weaviate_data:/var/lib/weaviate
+  #   restart: on-failure:0
+  #   environment:
+  #     QUERY_DEFAULTS_LIMIT: 25
+  #     AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: 'true'
+  #     PERSISTENCE_DATA_PATH: '/var/lib/weaviate'
+  #     ENABLE_MODULES: text2vec-transformers
+  #     TRANSFORMERS_INFERENCE_API: 'http://t2v-transformers-py:3000'
+  #     DEFAULT_VECTORIZER_MODULE: text2vec-transformers
+  #     CLUSTER_HOSTNAME: 'node1'
+  # t2v-transformers-rs:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - 3000:3000
+  #   environment:
+  #     HF_MODEL_ID: "BAAI/bge-small-en-v1.5"
+  #     HF_MODEL_REVISION: "refs/pr/9"
+  t2v-transformers-py:
+    image: semitechnologies/transformers-inference:baai-bge-small-en-v1.5
+    ports:
+      - 8080:8080
+    environment:
+      T2V_TRANSFORMERS_DIRECT_TOKENIZE: 'true'
 volumes:
   weaviate_data:
 ...
