--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,15 @@ path = "./src/main.rs"
 
 [dependencies]
 axum = "0.7.4"
-candle-core = { features = ["cuda"], version = "0.4.1" }
+candle-core = "0.4.1"
 candle-nn = "0.4.1"
 candle-transformers = "0.4.1"
 hf-hub = "0.3.2"
 hyper = "1.2.0"
 log = "0.4.21"
+ndarray = "0.15.6"
+ndarray-linalg = "0.16.0"
+ort = "2.0.0-rc.2"
 rayon = "1.9.0"
 serde = "1.0.197"
 serde_json = "1.0.115"
