--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,21 +24,27 @@ services:
   #     TRANSFORMERS_INFERENCE_API: 'http://t2v-transformers-py:3000'
   #     DEFAULT_VECTORIZER_MODULE: text2vec-transformers
   #     CLUSTER_HOSTNAME: 'node1'
-  # t2v-transformers-rs:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   ports:
-  #     - 3000:3000
-  #   environment:
-  #     HF_MODEL_ID: "BAAI/bge-small-en-v1.5"
-  #     HF_MODEL_REVISION: "refs/pr/9"
+  t2v-transformers-rs:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: gpu-release
+    ports:
+      - 3000:3000
+    environment:
+      HF_MODEL_ID: "BAAI/bge-small-en-v1.5"
+      HF_MODEL_REVISION: "refs/pr/9"
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
   t2v-transformers-py:
     image: semitechnologies/transformers-inference:baai-bge-small-en-v1.5
     ports:
       - 8080:8080
-    environment:
-      T2V_TRANSFORMERS_DIRECT_TOKENIZE: 'true'
 volumes:
   weaviate_data:
 ...
