--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,21 +28,14 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-      target: gpu-release
+      target: cpu-release
     ports:
       - 3000:3000
     environment:
       HF_MODEL_ID: "BAAI/bge-small-en-v1.5"
       HF_MODEL_REVISION: "refs/pr/9"
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: 1
-              capabilities: [gpu]
   t2v-transformers-py:
-    image: semitechnologies/transformers-inference:baai-bge-small-en-v1.5
+    image: semitechnologies/transformers-inference:baai-bge-small-en-v1.5-onnx
     ports:
       - 8080:8080
 volumes:
