Add CI step to build root GPU images with CUDA versions

--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -1,19 +1,6 @@
 ARG CUDA_VERSION
-FROM nvidia/cuda:${CUDA_VERSION}-devel-ubuntu22.04 as sys
-
-# Install rust dependencies
-RUN apt-get update -qq \
-    && apt-get install -qq -y vim gcc g++ curl git build-essential libssl-dev openssl pkg-config \
-    && rm -rf /var/lib/apt/lists/*
-
-# Install Rust
-RUN curl https://sh.rustup.rs -sSf | bash -s -- -y
-ENV PATH="/root/.cargo/bin:${PATH}"
-
-# Install Python
-RUN apt-get update && \
-    apt-get install -y python3-pip python3-dev python3.10-venv && \
-    rm -rf /var/lib/apt/lists/*
+FROM ghcr.io/weaviate/t2v-transformers-models-rs/t2v-rs-root-gpu-${CUDA_VERSION}:0.0.1 as build
+RUN . venv/bin/activate
 
 WORKDIR /app
 
@@ -22,14 +9,6 @@ COPY ./Cargo.lock ./Cargo.lock
 COPY ./Cargo.toml ./Cargo.toml
 COPY ./src ./src
 COPY ./ci ./ci
-
-FROM sys as build
-WORKDIR /app
-
-RUN python3 -m venv venv
-RUN . venv/bin/activate
-# Install Python scripts for model download
-RUN pip install -r ci/requirements.txt
 
 ARG TARGETARCH
 ARG MODEL_NAME
